--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">Dennis Stoliaryk</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -44,10 +44,10 @@
                         <span class="text-primary">Taylor</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                            New York, NY · (201) 230-8913 ·
+                        <a href="mailto:stoliarykd@gmail.com">stoliarykd@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5">A meticulous analyst with a drive of developing business growth strategies that result in profitable returns. I bring clarity to complex ideas and problems, and I find more than one way to accomplish an objective. I optimize business processes based on both data and context while excelling at challenges that require unique perspectives. My critical thinking and creative solutions allow me to build lasting and profound relationships with clients.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
@@ -63,27 +63,45 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Data Science Fellow</h3>
+                            <div class="subheading mb-3">General Assembly</div>
+                            <p>480-hour immersive program applying data collection and cleaning, analysis, modeling, data visualization, and machine/deep learning techniques to solve real-world data problems.
+- Capstone project utilizing machine learning to build a chess analysis model
+- Natural Language Processing to analyze and classify 60,000 Reddit posts using grid search and pipelines
+- Experience designing data science projects through Problem Statement development, data acquisition and cleaning, exploratory data analysis, modeling, evaluation and presentation for a range of technical audiences.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Finance Analyst</h3>
+                            <div class="subheading mb-3">Forte Piano Music Company</div>
+                            <p>Joined the family's local business to improve profitability and implement financial best practices. Developed promotional
+campaign sales targets, prioritized marketing spend and budget, and optimized inventory. Having taught myself how to play piano, I interact with clients and introduce them to Forte Piano’s selection of instruments.
+• Deployed a monthly reporting package that measures overall business and financial performance from a
+revenue and cost standpoint. Resulted in 10% cost savings by eliminating non-value advertising expenses.
+• Created campaign specific financial tracking by utilizing the client database to set sales targets and budget
+accordingly. Resulted in streamlined campaigns with more than 20% increase in profitability.
+• Greeted clients - inquired about specific customer needs, such as budget, purpose of the instrument, desired
+user experience, and location. Transitioned to close the sale appropriately and in a timely manner.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2019 - March 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Financial Advising Intern</h3>
+                            <div class="subheading mb-3">Lincoln Financial Advisors</div>
+                            <p>High visibility internship with focus on financial advising and planning. Used various financial tools and models to build scenarios for individual client investment portfolios. Proposed ideas and designed frameworks to effectively achieve client’s financial goal.
+
+· Researched and designed financial plans using software tools including eMoney, Morningstar, Albridge, and Hiddenlevers.
+· Assisted senior financial planners in preparing an investment strategy and planning for market scenarios.
+· Received product knowledge of outside investments, annuities, partnerships, and hedge fund companies.
+· Trained through Lincoln Financial Advisor Master’s Series coursework that focused on financial best practices, financial modeling, effective client interactions, managing relationships, and conflict resolution.
+
+
+CRN-2597865-061719</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2019 - August 2019</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -102,20 +120,21 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
+                            <h3 class="mb-0">General Assembly, Data Science Immersive</h3>
+                            <div class="subheading mb-3">Certificate</div>
+                            <div>Data Science</div>
                             <p>GPA: 3.23</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2021 - June 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Rutgers University, New Brunswick</h3>
+                            <div class="subheading mb-3">Bachelors of Science</div>
+                            <div>Mathematics</div>
+                            <p>GPA: 3.23</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2014 - January 2019</span></div>
                     </div>
                 </div>
             </section>
