--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        Dennis
+                        <span class="text-primary">Stoliaryk</span>
                     </h1>
                     <div class="subheading mb-5">
                             New York, NY · (201) 230-8913 ·
