--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ CRN-2597865-061719</p>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
                     </div>
                 </div>
             </section>
@@ -180,8 +180,8 @@ CRN-2597865-061719</p>
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from being a data scientist, I enjoy playing competitive chess, learning piano, and watching films. In the summer, I am an avid swimmer and enjoy swimming laps and diving in my local gym.</p>
+                    <p class="mb-0"> I am continuing to learn more languages when at home, both foreign and computer languages. I also spend a large amount of my free time exploring the latest tech developments in both the hardware and software space</p>
                 </div>
             </section>
             <hr class="m-0" />
