--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ CRN-2597865-061719</p>
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
                     <p>Apart from being a data scientist, I enjoy playing competitive chess, learning piano, and watching films. In the summer, I am an avid swimmer and enjoy swimming laps and diving in my local gym.</p>
-                    <p class="mb-0"> I am continuing to learn more languages when at home, both foreign and computer languages. I also spend a large amount of my free time exploring the latest tech developments in both the hardware and software space</p>
+                    <p class="mb-0"> I am continuing to learn more languages when at home, both foreign and computer languages. I also spend a large amount of my free time exploring the latest tech developments in both the hardware and software space.</p>
                 </div>
             </section>
             <hr class="m-0" />
