--- a/index.html
+++ b/index.html
@@ -143,17 +143,12 @@ CRN-2597865-061719</p>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
                         <li class="list-inline-item"><i class="devicon-python-plain colored"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="devicon-postgresql-plain colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-visualstudio-plain colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-jupyter-plain-wordmark colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-github-original colored"></i></li>
+                        <li class="list-inline-item"><i class="devicon-github-original colored"></i></li>
+
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
