--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ CRN-2597865-061719</p>
                         <li class="list-inline-item"><i class="devicon-github-original colored"></i></li>
 
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Hard Skills</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
