--- a/index.html
+++ b/index.html
@@ -116,19 +116,16 @@ CRN-2597865-061719</p>
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">General Assembly, Data Science Immersive</h3>
-                            <div class="subheading mb-3">Certificate</div>
-                            <div>Data Science</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">General Assembly</h3>
+                            <div class="subheading mb-3">Data Science Immersive</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2021 - June 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Rutgers University, New Brunswick</h3>
-                            <div class="subheading mb-3">Bachelors of Science</div>
+                            <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Mathematics</div>
-                            <p>GPA: 3.23</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2014 - January 2019</span></div>
                     </div>
