--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <span class="text-primary">Stoliaryk</span>
                     </h1>
                     <div class="subheading mb-5">
-                            Data Scientist · New York, NY · (201) 230-8913 ·
+                            Data Scientist · New York, NY ·
                         <a href="mailto:stoliarykd@gmail.com">stoliarykd@gmail.com</a>
                     </div>
                     <p class="lead mb-5">A meticulous analyst with a drive of developing business growth strategies that result in profitable returns. I bring clarity to complex ideas and problems, and I find more than one way to accomplish an objective. I optimize business processes based on both data and context while excelling at challenges that require unique perspectives. My critical thinking and creative solutions allow me to build lasting and profound relationships with clients.</p>
