--- a/index.html
+++ b/index.html
@@ -66,9 +66,18 @@
                             <h3 class="mb-0">Data Science Fellow</h3>
                             <div class="subheading mb-3">General Assembly</div>
                             <p>480-hour immersive program applying data collection and cleaning, analysis, modeling, data visualization, and machine/deep learning techniques to solve real-world data problems.
-- Capstone project utilizing machine learning to build a chess analysis model
-- Natural Language Processing to analyze and classify 60,000 Reddit posts using grid search and pipelines
-- Experience designing data science projects through Problem Statement development, data acquisition and cleaning, exploratory data analysis, modeling, evaluation and presentation for a range of technical audiences.</p>
+                                Individually or with a team, completed 6 projects including:</p>
+                            <ul>
+                                <li>
+                                    <a href="https://github.com/dennisstoli/Reddit-Classification-Project-">Similar but Unique: An NLP Model to Predict a Subreddit Post as Bitcoin or WallStreetBets</a>
+                                </li>
+                                <ul>
+                                    <li> Completed an end-to-end classification problem analysis, which included web scraping of 4,000+ posts from subreddit pages, conducted exploratory data analysis, and implemented Natural Language Processing (NLP) transformers
+                                    </li>
+                                    <li> Developed a Naive Bayes Multinomial machine learning model that predicted if a subreddit post was from /r/Nike or /r/Adidas with an accuracy score of 91%
+                                    </li>
+                                </ul>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
                     </div>
