--- a/index.html
+++ b/index.html
@@ -77,6 +77,24 @@
                                     <li> Developed a Naive Bayes Multinomial machine learning model that predicted if a subreddit post was from /r/Nike or /r/Adidas with an accuracy score of 91%
                                     </li>
                                 </ul>
+                                <li>
+                                    <a href="https://github.com/dennisstoli/capstone_chess-">Image Processing: Using Machine Learning to Read Chess Boards and Return a Position in FEN</a>
+                                </li>
+                                <ul>
+                                    <li> Created a variety of functions to transform a FEN into a matrix and visa versa, processed images to input into a Machine Learning Model using Tensorflow Keras, and built a finished model which predicts a FEN from an image with ~99% accuracy.
+                                    </li>
+                                    <li> Developed and launched a Streamlit application using my finished model to demonstrate project.
+                                    </li>
+                                </ul>
+                                <li>
+                                    <a href="https://github.com/SteveRiehl/covid-19-project">Group Project: COVID-19 Hospitalization Analysis Project/a>
+                                </li>
+                                <ul>
+                                    <li> Built a variety of classification models to predict whether an individual would be hospitalized after testing for COVID-19
+                                    </li>
+                                    <li> Created visuals, graphs, and classificaiton reports, to present findings to a technical audience.
+                                    </li>
+                                </ul>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
