--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                     </li>
                                 </ul>
                                 <li>
-                                    <a href="https://github.com/SteveRiehl/covid-19-project">Group Project: COVID-19 Hospitalization Analysis Project/a>
+                                    <a href="https://github.com/SteveRiehl/covid-19-project">Group Project: COVID-19 Hospitalization Analysis Project</a>
                                 </li>
                                 <ul>
                                     <li> Built a variety of classification models to predict whether an individual would be hospitalized after testing for COVID-19
