--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
                                     <a href="https://github.com/dennisstoli/Reddit-Classification-Project-">Similar but Unique: An NLP Model to Predict a Subreddit Post as Bitcoin or WallStreetBets</a>
                                 </li>
                                 <ul>
-                                    <li> Completed an end-to-end classification problem analysis, which included web scraping of 4,000+ posts from subreddit pages, conducted exploratory data analysis, and implemented Natural Language Processing (NLP) transformers
+                                    <li> Completed an end-to-end classification problem analysis, which included web scraping of 20,000+ posts from subreddit pages, conducted exploratory data analysis, and implemented Natural Language Processing (NLP) transformers.
                                     </li>
-                                    <li> Developed a Naive Bayes Multinomial machine learning model that predicted if a subreddit post was from /r/Nike or /r/Adidas with an accuracy score of 91%
+                                    <li> Developed a Naive Bayes Multinomial machine learning model that predicted if a subreddit post was from /r/bitcoin or /r/wallstreetbets with an accuracy score of ~90%.
                                     </li>
                                 </ul>
                                 <li>
                                     <a href="https://github.com/dennisstoli/capstone_chess-">Image Processing: Using Machine Learning to Read Chess Boards and Return a Position in FEN</a>
                                 </li>
                                 <ul>
-                                    <li> Created a variety of functions to transform a FEN into a matrix and visa versa, processed images to input into a Machine Learning Model using Tensorflow Keras, and built a finished model which predicts a FEN from an image with ~99% accuracy.
+                                    <li> Created a variety of functions to transform a FEN into a matrix and visa versa, processed images to input into a Machine Learning Model using Tensorflow Keras, and built a finished model which predicts a FEN from an image with over ~99% accuracy.
                                     </li>
                                     <li> Developed and launched a Streamlit application using my finished model to demonstrate project.
                                     </li>
@@ -90,9 +90,9 @@
                                     <a href="https://github.com/SteveRiehl/covid-19-project">Group Project: COVID-19 Hospitalization Analysis Project</a>
                                 </li>
                                 <ul>
-                                    <li> Built a variety of classification models to predict whether an individual would be hospitalized after testing for COVID-19
+                                    <li> Extracted and cleaned public data provided by the CDC. Conducted proper EDA, and built a variety of classification models to predict whether an individual would be hospitalized after testing for COVID-19.
                                     </li>
-                                    <li> Created visuals, graphs, and classificaiton reports, to present findings to a technical audience.
+                                    <li> Created visuals, graphs, and classificaiton reports to present findings/conculusions to a technical audience.
                                     </li>
                                 </ul>
                             </ul>
