--- a/index.html
+++ b/index.html
@@ -105,13 +105,19 @@
                             <div class="subheading mb-3">Forte Piano Music Company</div>
                             <p>Joined the family's local business to improve profitability and implement financial best practices. Developed promotional
 campaign sales targets, prioritized marketing spend and budget, and optimized inventory. Having taught myself how to play piano, I interact with clients and introduce them to Forte Piano’s selection of instruments.
-• Deployed a monthly reporting package that measures overall business and financial performance from a
+                            </p>
+                            <ul>
+                                <li> Deployed a monthly reporting package that measures overall business and financial performance from a
 revenue and cost standpoint. Resulted in 10% cost savings by eliminating non-value advertising expenses.
-• Created campaign specific financial tracking by utilizing the client database to set sales targets and budget
+                                </li>
+                                <li> Created campaign specific financial tracking by utilizing the client database to set sales targets and budget
 accordingly. Resulted in streamlined campaigns with more than 20% increase in profitability.
-• Greeted clients - inquired about specific customer needs, such as budget, purpose of the instrument, desired
-user experience, and location. Transitioned to close the sale appropriately and in a timely manner.</p>
-                        </div>
+                                </li>
+                                <li> Greeted clients - inquired about specific customer needs, such as budget, purpose of the instrument, desired
+user experience, and location. Transitioned to close the sale appropriately and in a timely manner.
+                                </li>
+                            </ul>
+                                </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2019 - March 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
