--- a/index.html
+++ b/index.html
@@ -125,14 +125,19 @@ user experience, and location. Transitioned to close the sale appropriately and 
                             <h3 class="mb-0">Financial Advising Intern</h3>
                             <div class="subheading mb-3">Lincoln Financial Advisors</div>
                             <p>High visibility internship with focus on financial advising and planning. Used various financial tools and models to build scenarios for individual client investment portfolios. Proposed ideas and designed frameworks to effectively achieve client’s financial goal.
-
-· Researched and designed financial plans using software tools including eMoney, Morningstar, Albridge, and Hiddenlevers.
-· Assisted senior financial planners in preparing an investment strategy and planning for market scenarios.
-· Received product knowledge of outside investments, annuities, partnerships, and hedge fund companies.
-· Trained through Lincoln Financial Advisor Master’s Series coursework that focused on financial best practices, financial modeling, effective client interactions, managing relationships, and conflict resolution.
-
-
-CRN-2597865-061719</p>
+                            </p>
+                            <ul>
+                                <li> Researched and designed financial plans using software tools including eMoney, Morningstar, Albridge, and Hiddenlevers.
+                                </li>
+                                <li> Assisted senior financial planners in preparing an investment strategy and planning for market scenarios.
+                                </li>
+                                <li> Received product knowledge of outside investments, annuities, partnerships, and hedge fund companies.
+                                </li>
+                                <li> Trained through Lincoln Financial Advisor Master’s Series coursework that focused on financial best practices, financial modeling, effective client interactions, managing relationships, and conflict resolution.
+                                </li>
+                                
+                            </ul>
+                            
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2019 - August 2019</span></div>
                     </div>
