--- a/index.html
+++ b/index.html
@@ -159,10 +159,17 @@ user experience, and location. Transitioned to close the sale appropriately and 
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2021 - June 2021</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">General Assembly</h3>
+                            <div class="subheading mb-3">Data Science Immersive</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2021 - June 2021</span></div>
+                    </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Rutgers University, New Brunswick</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
+                            <div class="subheading mb-3">Bachelor of Science, Mathematics</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2014 - January 2019</span></div>
                     </div>
