--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
                                     </li>
                                     <li> Developed and launched a Streamlit application using my finished model to demonstrate project.
                                     </li>
+                                    <li>
+                                    <a href=https://share.streamlit.io/dennisstoli/chessboardtofen/main/board_to_fen.py>Try the application here</a>
+                                    </li>
                                 </ul>
                                 <li>
                                     <a href="https://github.com/SteveRiehl/covid-19-project">Group Project: COVID-19 Hospitalization Analysis Project</a>
