--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://drive.google.com/file/d/1JRaB-UCbT4_i3lZhEWWfzwLK_hoT-pK9/view?usp=sharing">Resume</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://docs.google.com/document/d/1Q14b2vcHfgVAGGENmTVfWedLtveuL5aAnBtxF45R_wA/edit?usp=sharing">Resume</a></li>
                 </ul>
             </div>
         </nav>
