--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             Data Scientist · New York, NY ·
                         <a href="mailto:stoliarykd@gmail.com">stoliarykd@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">A meticulous analyst with a drive of developing business growth strategies that result in profitable returns. I bring clarity to complex ideas and problems, and I find more than one way to accomplish an objective. I optimize business processes based on both data and context while excelling at challenges that require unique perspectives. My critical thinking and creative solutions allow me to build lasting and profound relationships with clients.</p>
+                    <p class="lead mb-5">I am a meticulous data scientist who analyzes and interprets large data sets and solves detailed problems that require an analytical understanding as well as computer language experience. I leverage my skills in Python, Machine Learning, and Data Wrangling to create predictive models efficiently. With my range of experience in areas such as Data Analytics, Financial Analytics, and Statistical Analysis, I offer myself as a confident, ambitious, and versatile employee.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/dennis-stoliaryk/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/dennisstoli"><i class="fab fa-github"></i></a>
