--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 <ul>
                                     <li> Extracted and cleaned public data provided by the CDC. Conducted proper EDA, and built a variety of classification models to predict whether an individual would be hospitalized after testing for COVID-19.
                                     </li>
-                                    <li> Created visuals, graphs, and classificaiton reports to present findings/conculusions to a technical audience.
+                                    <li> Created visuals, graphs, and classification reports to present findings/conclusions to a technical audience.
                                     </li>
                                 </ul>
                             </ul>
