--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
                                 <ul>
                                     <li> Completed an end-to-end classification problem analysis, which included web scraping of 20,000+ posts from subreddit pages, conducted exploratory data analysis, and implemented Natural Language Processing (NLP) transformers.
                                     </li>
-                                    <li> Developed a Naive Bayes Multinomial machine learning model that predicted if a subreddit post was from /r/bitcoin or /r/wallstreetbets with an accuracy score of ~90%.
+                                    <li> Developed a Naive Bayes Multinomial model that predicted if a subreddit post was from /r/bitcoin or /r/wallstreetbets with an accuracy score of ~90%.
                                     </li>
                                 </ul>
                                 <li>
                                     <a href="https://github.com/dennisstoli/chessboardtoFEN">Image Processing: Using Machine Learning to Read Chess Boards and Return a Position in FEN</a>
                                 </li>
                                 <ul>
-                                    <li> Created a variety of functions to transform a FEN into a matrix and visa versa, processed images to input into a Machine Learning Model using Tensorflow Keras, and built a finished model which predicts a FEN from an image with over ~99% accuracy.
+                                    <li> Created a variety of functions to transform a FEN into a matrix and vice versa, processed images to input into a Machine Learning Model using Tensorflow Keras, and built a finished model which predicts a FEN from an image with over ~99% accuracy.
                                     </li>
                                     <li> Developed and launched a Streamlit application using my finished model to demonstrate project.
                                     </li>
