--- a/index.html
+++ b/index.html
@@ -63,6 +63,13 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Data Analyst</h3>
+                            <div class="subheading mb-3">FreedomCare</div>
+                                </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2019 - March 2021</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Data Science Fellow</h3>
                             <div class="subheading mb-3">General Assembly</div>
                             <p>480-hour immersive program applying data collection and cleaning, analysis, modeling, data visualization, and machine/deep learning techniques to solve real-world data problems.
