--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <h3 class="mb-0">Data Analyst</h3>
                             <div class="subheading mb-3">FreedomCare</div>
                                 </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2019 - March 2021</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2021 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
