--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 </ul>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2021 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2021 - June 2021</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
