--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@ user experience, and location. Transitioned to close the sale appropriately and 
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="devicon-microsoftsqlserver-plain-wordmark"></i></li>
                         <li class="list-inline-item"><i class="devicon-python-plain colored"></i></li>
                         <li class="list-inline-item"><i class="devicon-postgresql-plain colored"></i></li>
                         <li class="list-inline-item"><i class="devicon-visualstudio-plain colored"></i></li>
@@ -201,6 +202,14 @@ user experience, and location. Transitioned to close the sale appropriately and 
                     </ul>
                     <div class="subheading mb-3">Hard Skills</div>
                     <ul class="fa-ul mb-0">
+                         <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Tableau
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Microsoft Sql Server
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Python
