--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@
                             <div class="subheading mb-3">FreedomCare</div>
                                 </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2021 - Present</span></div>
+                            <ul>
+                                <li>  Develop and maintain data pipelines to extract, transform, and load healthcare data using SQL and Python.
+                                </li>
+                                <li> Analyze healthcare data to identify trends, patterns, and insights that inform strategic decisions and improve patient outcomes.
+                                </li>
+                                <li>  Design and develop interactive dashboards and visualizations using Tableau to present insights to key stakeholders and facilitate data-driven decision-making.
+                                </li>
+                                <li> Collaborate with cross-functional teams to define and track key performance indicators (KPIs) and metrics, ensuring data accuracy and consistency.
+                                </li>
+                                <li> Conduct exploratory data analysis and provide ad-hoc reports to support business initiatives and improve operational efficiency.
+                                </li>
+                                
+                            </ul>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
